<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CadastroLivro">

    <TextView
        style="@style/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastroLivro"/>

    <EditText
        android:id="@+id/txtTitulo"
        style="@style/editTextForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPreco"
        style="@style/editTextForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtCategoria"
        style="@style/editTextForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categoria"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtLivroDescricao"
        style="@style/editTextForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricao"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCadastrarLivro"
        style="@style/butonForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrarLivro" />

</androidx.appcompat.widget.LinearLayoutCompat >